// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default 1`] = `
"# Generated by cdkactions. Do not modify
# Generated as part of the 'application' stack.
name: Build and Deploy
on: push
jobs:
  django-check:
    name: Django Check
    runs-on: ubuntu-latest
    steps:
      - uses: actions/checkout@v2
      - name: Cache
        uses: actions/cache@v2
        with:
          path: ~/.local/share/virtualenvs
          key: v0-\${{ hashFiles('backend/Pipfile.lock') }}
      - name: Install Dependencies
        run: |-
          cd backend
          pip install pipenv
          pipenv install --deploy --dev
      - name: Lint (flake8)
        run: |-
          cd backend
          pipenv run flake8 .
      - name: Lint (black)
        run: |-
          cd backend
          pipenv run black --check .
      - name: Test (run in parallel)
        run: |-
          cd backend
          pipenv run coverage run --concurrency=multiprocessing manage.py test --settings=example.settings.ci --parallel
          pipenv run coverage combine
      - name: Upload Code Coverage
        run: |-
          ROOT=$(pwd)
          cd backend
          pipenv run codecov --root $ROOT --flags backend
    container:
      image: python:3.8
    env:
      DATABASE_URL: postgres://postgres:postgres@postgres:5432/postgres
    services:
      postgres:
        image: postgres:12
        env:
          POSTGRES_USER: postgres
          POSTGRES_DB: postgres
          POSTGRES_PASSWORD: postgres
        options: \\"--health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5\\"
  publish-backend:
    name: Publish backend
    runs-on: ubuntu-latest
    steps:
      - uses: actions/checkout@v2
      - uses: docker/setup-qemu-action@v1
      - uses: docker/setup-buildx-action@v1
      - name: Cache Docker layers
        uses: actions/cache@v2
        with:
          path: /tmp/.buildx-cache
          key: buildx-publish-backend
      - uses: docker/login-action@v1
        with:
          username: \${{ secrets.DOCKER_USERNAME }}
          password: \${{ secrets.DOCKER_PASSWORD }}
      - name: Build/Publish
        uses: docker/build-push-action@v2
        with:
          context: backend
          file: backend/Dockerfile
          push: \${{ github.ref == 'refs/heads/master' }}
          cache-from: type=local,src=/tmp/.buildx-cache,type=registry,ref=pennlabs/example-backend:latest
          cache-to: type=local,dest=/tmp/.buildx-cache
          tags: pennlabs/example-backend:latest,pennlabs/example-backend:\${{ github.sha }}
    needs: django-check
  react-check:
    name: React Check
    runs-on: ubuntu-latest
    steps:
      - uses: actions/checkout@v2
      - name: Cache
        uses: actions/cache@v2
        with:
          path: \\"**/node_modules\\"
          key: v0-\${{ hashFiles('frontend/yarn.lock') }}
      - name: Install Dependencies
        run: |-
          cd frontend
          yarn install --frozen-lockfile
      - name: Lint
        run: |-
          cd frontend
          yarn lint
      - name: Test
        run: |-
          cd frontend
          yarn test
      - name: Upload Code Coverage
        run: |-
          ROOT=$(pwd)
          cd frontend
          yarn run codecov -p $ROOT -F frontend
    container:
      image: node:14
  publish-frontend:
    name: Publish frontend
    runs-on: ubuntu-latest
    steps:
      - uses: actions/checkout@v2
      - uses: docker/setup-qemu-action@v1
      - uses: docker/setup-buildx-action@v1
      - name: Cache Docker layers
        uses: actions/cache@v2
        with:
          path: /tmp/.buildx-cache
          key: buildx-publish-frontend
      - uses: docker/login-action@v1
        with:
          username: \${{ secrets.DOCKER_USERNAME }}
          password: \${{ secrets.DOCKER_PASSWORD }}
      - name: Build/Publish
        uses: docker/build-push-action@v2
        with:
          context: frontend
          file: frontend/Dockerfile
          push: \${{ github.ref == 'refs/heads/master' }}
          cache-from: type=local,src=/tmp/.buildx-cache,type=registry,ref=pennlabs/example-frontend:latest
          cache-to: type=local,dest=/tmp/.buildx-cache
          tags: pennlabs/example-frontend:latest,pennlabs/example-frontend:\${{ github.sha }}
    needs: react-check
  deploy:
    runs-on: ubuntu-latest
    if: github.ref == 'refs/heads/master'
    steps:
      - uses: actions/checkout@v2
      - id: synth
        name: Synth cdk8s manifests
        run: |-
          cd k8s
          yarn install

          # get repo name (by removing owner/organization)
          RELEASE_NAME=\${REPOSITORY#*/}

          # Export RELEASE_NAME as an output
          echo \\"::set-output RELEASE_NAME=$RELEASE_NAME\\"

          yarn build
        env:
          GIT_SHA: \${{ github.sha }}
          REPOSITORY: \${{ github.repository }}
      - name: Deploy
        run: |-
          aws eks --region us-east-1 update-kubeconfig --name production --role-arn arn:aws:iam::\${AWS_ACCOUNT_ID}:role/kubectl

          # get repo name from synth step
          RELEASE_NAME=\${{ steps.synth.outputs.RELEASE_NAME }}

          for i in {1..10}; do
            # This is bash soup, but it'll do.
            # 1. Attempt to install with kittyhawk
            # 2. If this succeeds, exit with a success status code
            # 3. If it fails, mark the command as succeeded so that '-e' doesn't kick us out
            # 4. Wait 10s and try again
            kubectl apply -f k8s/dist/kittyhawk.k8s.yaml --prune -l release=$RELEASE_NAME && exit 0 || true
            sleep 10s
            echo \\"Retrying deploy for $i times\\"
          done

          # If we get here, all kubectl applies failed so our command should fail
          exit 1
        env:
          AWS_ACCOUNT_ID: \${{ secrets.AWS_ACCOUNT_ID }}
          AWS_ACCESS_KEY_ID: \${{ secrets.GH_AWS_ACCESS_KEY_ID }}
          AWS_SECRET_ACCESS_KEY: \${{ secrets.GH_AWS_SECRET_ACCESS_KEY }}
    needs:
      - publish-backend
      - publish-frontend
"
`;

exports[`integration tests 1`] = `
"# Generated by cdkactions. Do not modify
# Generated as part of the 'application' stack.
name: Build and Deploy
on: push
jobs:
  django-check:
    name: Django Check
    runs-on: ubuntu-latest
    steps:
      - uses: actions/checkout@v2
      - name: Cache
        uses: actions/cache@v2
        with:
          path: ~/.local/share/virtualenvs
          key: v0-\${{ hashFiles('backend/Pipfile.lock') }}
      - name: Install Dependencies
        run: |-
          cd backend
          pip install pipenv
          pipenv install --deploy --dev
      - name: Lint (flake8)
        run: |-
          cd backend
          pipenv run flake8 .
      - name: Lint (black)
        run: |-
          cd backend
          pipenv run black --check .
      - name: Test (run in parallel)
        run: |-
          cd backend
          pipenv run coverage run --concurrency=multiprocessing manage.py test --settings=example.settings.ci --parallel
          pipenv run coverage combine
      - name: Upload Code Coverage
        run: |-
          ROOT=$(pwd)
          cd backend
          pipenv run codecov --root $ROOT --flags backend
    container:
      image: python:3.8
    env:
      DATABASE_URL: postgres://postgres:postgres@postgres:5432/postgres
    services:
      postgres:
        image: postgres:12
        env:
          POSTGRES_USER: postgres
          POSTGRES_DB: postgres
          POSTGRES_PASSWORD: postgres
        options: \\"--health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5\\"
  build-backend:
    name: Build backend
    runs-on: ubuntu-latest
    steps:
      - uses: actions/checkout@v2
      - uses: docker/setup-qemu-action@v1
      - uses: docker/setup-buildx-action@v1
      - name: Cache Docker layers
        uses: actions/cache@v2
        with:
          path: /tmp/.buildx-cache
          key: buildx-build-backend
      - name: Build/Publish
        uses: docker/build-push-action@v2
        with:
          context: backend
          file: backend/Dockerfile
          push: false
          cache-from: type=local,src=/tmp/.buildx-cache,type=registry,ref=pennlabs/example-backend:latest
          cache-to: type=local,dest=/tmp/.buildx-cache
          tags: pennlabs/example-backend:latest,pennlabs/example-backend:\${{ github.sha }}
          outputs: type=docker,dest=/tmp/image.tar
      - uses: actions/upload-artifact@v2
        with:
          name: build-backend
          path: /tmp/image.tar
    needs: django-check
  react-check:
    name: React Check
    runs-on: ubuntu-latest
    steps:
      - uses: actions/checkout@v2
      - name: Cache
        uses: actions/cache@v2
        with:
          path: \\"**/node_modules\\"
          key: v0-\${{ hashFiles('frontend/yarn.lock') }}
      - name: Install Dependencies
        run: |-
          cd frontend
          yarn install --frozen-lockfile
      - name: Lint
        run: |-
          cd frontend
          yarn lint
      - name: Test
        run: |-
          cd frontend
          yarn test
      - name: Upload Code Coverage
        run: |-
          ROOT=$(pwd)
          cd frontend
          yarn run codecov -p $ROOT -F frontend
    container:
      image: node:14
  build-frontend:
    name: Build frontend
    runs-on: ubuntu-latest
    steps:
      - uses: actions/checkout@v2
      - uses: docker/setup-qemu-action@v1
      - uses: docker/setup-buildx-action@v1
      - name: Cache Docker layers
        uses: actions/cache@v2
        with:
          path: /tmp/.buildx-cache
          key: buildx-build-frontend
      - name: Build/Publish
        uses: docker/build-push-action@v2
        with:
          context: frontend
          file: frontend/Dockerfile
          push: false
          cache-from: type=local,src=/tmp/.buildx-cache,type=registry,ref=pennlabs/example-frontend:latest
          cache-to: type=local,dest=/tmp/.buildx-cache
          tags: pennlabs/example-frontend:latest,pennlabs/example-frontend:\${{ github.sha }}
          outputs: type=docker,dest=/tmp/image.tar
      - uses: actions/upload-artifact@v2
        with:
          name: build-frontend
          path: /tmp/image.tar
    needs: react-check
  integration-tests:
    name: Integration Tests
    runs-on: ubuntu-latest
    steps:
      - uses: actions/checkout@v2
      - uses: actions/download-artifact@v2
      - name: Load docker images
        run: |-
          docker load --input build-backend/image.tar
          docker load --input build-frontend/image.tar
      - name: Run docker compose
        run: |-
          mkdir -p /tmp/test-results
          docker-compose -f docker-compose.test.yaml up -d
      - name: Wait for backend
        run: |-
          for try in {1..20}; do
            docker-compose -f docker-compose.test.yaml exec -T backend python manage.py migrate --check && break
            sleep 5
          done
      - name: Populate backend
        run: docker-compose -f docker-compose.test.yaml exec -T backend python manage.py populate
      - name: Run integration tests
        run: echo \\"Add an integration test command\\" && exit 1
      - name: Delete artifacts when no longer needed
        if: failure() || github.ref != 'refs/heads/master'
        uses: geekyeggo/delete-artifact@v1
        with:
          name: |-
            build-backend
            build-frontend
      - name: Print logs on failure
        if: failure()
        run: docker-compose -f docker-compose.test.yaml logs
      - name: Upload artifacts on failure
        if: failure()
        uses: actions/upload-artifact@v2
        with:
          name: cypress-output
          path: /tmp/test-results
    env:
      GIT_SHA: \${{ github.sha }}
    needs:
      - build-backend
      - build-frontend
  post-integration-publish:
    name: Publish Images
    runs-on: ubuntu-latest
    if: github.ref == 'refs/heads/master'
    steps:
      - uses: actions/checkout@v2
      - uses: actions/download-artifact@v2
      - uses: geekyeggo/delete-artifact@v1
        with:
          name: |-
            build-backend
            build-frontend
      - name: Load docker images
        run: |-
          docker load --input build-backend/image.tar
          docker load --input build-frontend/image.tar
      - uses: docker/login-action@v1
        with:
          username: \${{ secrets.DOCKER_USERNAME }}
          password: \${{ secrets.DOCKER_PASSWORD }}
      - name: Push docker images
        run: |-
          docker push -a pennlabs/example-backend
          docker push -a pennlabs/example-frontend
    needs: integration-tests
  deploy:
    runs-on: ubuntu-latest
    if: github.ref == 'refs/heads/master'
    steps:
      - uses: actions/checkout@v2
      - id: synth
        name: Synth cdk8s manifests
        run: |-
          cd k8s
          yarn install

          # get repo name (by removing owner/organization)
          RELEASE_NAME=\${REPOSITORY#*/}

          # Export RELEASE_NAME as an output
          echo \\"::set-output RELEASE_NAME=$RELEASE_NAME\\"

          yarn build
        env:
          GIT_SHA: \${{ github.sha }}
          REPOSITORY: \${{ github.repository }}
      - name: Deploy
        run: |-
          aws eks --region us-east-1 update-kubeconfig --name production --role-arn arn:aws:iam::\${AWS_ACCOUNT_ID}:role/kubectl

          # get repo name from synth step
          RELEASE_NAME=\${{ steps.synth.outputs.RELEASE_NAME }}

          for i in {1..10}; do
            # This is bash soup, but it'll do.
            # 1. Attempt to install with kittyhawk
            # 2. If this succeeds, exit with a success status code
            # 3. If it fails, mark the command as succeeded so that '-e' doesn't kick us out
            # 4. Wait 10s and try again
            kubectl apply -f k8s/dist/kittyhawk.k8s.yaml --prune -l release=$RELEASE_NAME && exit 0 || true
            sleep 10s
            echo \\"Retrying deploy for $i times\\"
          done

          # If we get here, all kubectl applies failed so our command should fail
          exit 1
        env:
          AWS_ACCOUNT_ID: \${{ secrets.AWS_ACCOUNT_ID }}
          AWS_ACCESS_KEY_ID: \${{ secrets.GH_AWS_ACCESS_KEY_ID }}
          AWS_SECRET_ACCESS_KEY: \${{ secrets.GH_AWS_SECRET_ACCESS_KEY }}
    needs:
      - post-integration-publish
"
`;
